--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h2>My Basic Info</h2>
             <img src="111.jpg" alt="Yuqing(Brandy) Huang">
             <p><strong>Name:</strong> Yuqing(Brandy) Huang</p>
-            <p><strong>LinkedIn:</strong> <a href="#">www.linkedin.com/in/yq-huang</a></p>
+            <p><strong>LinkedIn:</strong> <a href="#">https://www.linkedin.com/in/yq-huang/</a></p>
             <p><strong>Phone:</strong> (628) 444-9955</p>
             <p><strong>Email:</strong> byqhuang@ucdavis.edu</p>
             <p><strong>Address:</strong> San Francisco, CA</p>
@@ -88,7 +88,7 @@
     </main>
     
     <footer>
-        <p>&copy; 2025 My GitHub Pages Site</p>
+        <p>&copy; 2025 Yuqing(Brandy) Huang</p>
     </footer>
 </body>
 </html>
