--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Pages Site</title>
+    <title>Brandy Pages Site</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -40,7 +40,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My GitHub Pages Site</h1>
+        <h1>Welcome to My GitHub World</h1>
     </header>
     
     <main class="container">
@@ -68,7 +68,12 @@
     <li>Business Analytic, MS UC Davis</li>
     <li>Hotel Management, BA Macau University of Science and Technology</li>
 </ul>
-            <p><strong>Work Experience:</strong> Your past work experience.</p>
+            <p><strong>Experiences:</strong></p>
+<ul>
+    <li>Data Scientist(Project Manager) @Angel Flight West Practicum, US</li>
+    <li>Operation Analyst @Galaxy Entertainment Group, Macau</li>
+    <li>Research Assistant @Macau University of Science and Technology, Macau</li>
+</ul>
         </section>
         
         <!-- Projects Section -->
