--- a/index.html
+++ b/index.html
@@ -3,40 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brandy Pages Site</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
-        header {
-            background-color: #333;
-            color: white;
-            padding: 1rem;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            text-align: left;
-        }
-        .profile img {
-            width: 150px;
-            border-radius: 50%;
-        }
-        .projects button {
-            padding: 10px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-        .projects button:hover {
-            background-color: #0056b3;
-        }
-    </style>
+    <title>My GitHub Pages Site</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
