--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Pages Site</title>
+    <title>Brandy's GitHub Pages Site</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -31,17 +31,6 @@
               understand what people really want (besides coffee). Skilled in statistical analysis and decision-making, I decode patterns and trends with a touch of humor. 
               When I’m not analyzing data, I’m either experimenting with recipes, lost in a book, or crafting the perfect one-liner. If you need analytics with personality, 
               I’m your person!</p>
-            <p><strong>Education:</strong></p>
-<ul>
-    <li>Business Analytic, MS UC Davis</li>
-    <li>Hotel Management, BA Macau University of Science and Technology</li>
-</ul>
-            <p><strong>Experiences:</strong></p>
-<ul>
-    <li>Data Scientist(Project Manager) @Angel Flight West Practicum, US</li>
-    <li>Operation Analyst @Galaxy Entertainment Group, Macau</li>
-    <li>Research Assistant @Macau University of Science and Technology, Macau</li>
-</ul>
         </section>
         
         <!-- Projects Section -->
