--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Basic Info Section -->
         <section class="profile">
             <h2>My Basic Info</h2>
-            <img src="111.jpg" alt="Yuqing(Brandy) Huang">
+            <img src="111.jpg" alt="Yuqing(Brandy) Huang" class="profile-img">
             <p><strong>Name:</strong> Yuqing(Brandy) Huang</p>
             <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/yq-huang">linkedin.com/in/yq-huang</a></p>
             <p><strong>Phone:</strong> (628) 444-9955</p>
@@ -54,3 +54,4 @@
     </footer>
 </body>
 </html>
+
