--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             <h2>My Projects</h2>
             <p>Here are some of my recent projects. Click below to view details.</p>
             <div>
-                <p>Project 1</p>
+                <p>Conjoint Analysis of Smartphone Market</p>
                 <button onclick="window.location.href='https://github.com/yourusername/project1'">View Project</button>
             </div>
             <div>
-                <p>Project 2</p>
+                <p>Data Poisition Job Salary Analysis</p>
                 <button onclick="window.location.href='https://github.com/yourusername/project2'">View Project</button>
             </div>
             <!-- Add more projects as needed -->
