--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 <body>
     <header>
         <h1>Welcome to My GitHub World</h1>
+        <div class="header-content">
+            <img src="111.jpg" alt="Yuqing(Brandy) Huang" class="profile-img">
+            <div class="header-info">
+                <h1>Welcome to My GitHub World</h1>
+                <p><strong>Name:</strong> Yuqing(Brandy) Huang</p>
+                <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/yq-huang">linkedin.com/in/yq-huang</a></p>
+                <p><strong>Phone:</strong> (628) 444-9955</p>
+                <p><strong>Email:</strong> byqhuang@ucdavis.edu</p>
+                <p><strong>Address:</strong> San Francisco, CA</p>
+            </div>
+        </div>
     </header>
     
-    <main class="container">
-        <!-- Basic Info Section -->
-        <section class="profile">
-            <h2>My Basic Info</h2>
-            <img src="111.jpg" alt="Yuqing(Brandy) Huang" class="profile-img">
-            <p><strong>Name:</strong> Yuqing(Brandy) Huang</p>
-            <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/yq-huang">linkedin.com/in/yq-huang</a></p>
-            <p><strong>Phone:</strong> (628) 444-9955</p>
-            <p><strong>Email:</strong> byqhuang@ucdavis.edu</p>
-            <p><strong>Address:</strong> San Francisco, CA</p>
-        </section>
-        
+    <main class="container">   
         <!-- Additional Info Section -->
         <section class="additional-info">
             <h2>More About Me</h2>
