--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <!-- Additional Info Section -->
         <section class="additional-info">
             <h2>More About Me</h2>
-            <p><strong>Personal Description:</strong> Data enthusiast by day, coffee connoisseur by night. As an MS in Business Analytics candidate at UC Davis, 
+            <p>Data enthusiast by day, tea connoisseur by night. As an MS in Business Analytics candidate at UC Davis, 
               I turn data into insights and numbers into strategies. With experience in hospitality, customer service, and consumer behavior, I help businesses 
-              understand what people really want (besides coffee). Skilled in statistical analysis and decision-making, I decode patterns and trends with a touch of humor. 
-              When I’m not analyzing data, I’m either experimenting with recipes, lost in a book, or crafting the perfect one-liner. If you need analytics with personality, 
+              understand what people really want (besides tea...). Skilled in statistical analysis and decision-making, I decode patterns and trends with a touch of humor. 
+              When I’m not analyzing data, I’m either experimenting with recipes, lost in music, or experiencing outdoors. If you need analytics with personality, 
               I’m your person!</p>
         </section>
         
