--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
         <!-- Additional Info Section -->
         <section class="additional-info">
             <h2>More About Me</h2>
-            <p>Data enthusiast by day, tea connoisseur by night. As an MS in Business Analytics candidate at UC Davis, 
+            <p> A real data enthusiast by day, and ice cream lover by night...<br>
+              As an MS in Business Analytics candidate at UC Davis, 
               I turn data into insights and numbers into strategies. With experience in hospitality, customer service, and consumer behavior, I help businesses 
-              understand what people really want (besides tea...). Skilled in statistical analysis and decision-making, I decode patterns and trends with a touch of humor. 
-              When I’m not analyzing data, I’m either experimenting with recipes, lost in music, or experiencing outdoors. If you need analytics with personality, 
+              understand what people really want (inlcuding ice cream!). I love finding patterns in data and making sense of trends, and I try to keep it fun—because data shouldn’t be boring! 
+              When I’m not working with data, I’m probably trying out new recipes, getting lost in music, or enjoying the outdoors. If you need someone who brings both data skills and personality, 
               I’m your person!</p>
         </section>
         
