--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <p> A real data enthusiast by day, and ice cream lover by night...<br>
               As an MS in Business Analytics candidate at UC Davis, 
               I turn data into insights and numbers into strategies. With experience in hospitality, customer service, and consumer behavior, I help businesses 
-              understand what people really want (inlcuding ice cream!). I love finding patterns in data and making sense of trends, and I try to keep it fun—because data shouldn’t be boring! 
+              understand what people really want (including ice cream!). I love finding patterns in data and making sense of trends, and I try to keep it fun—because data shouldn’t be boring! 
               When I’m not working with data, I’m probably trying out new recipes, getting lost in music, or enjoying the outdoors. If you need someone who brings both data skills and personality, 
               I’m your person!</p>
         </section>
@@ -41,18 +41,21 @@
             <p>Here are some of my recent projects. Click below to view details.</p>
             <div class="project-grid">
                 <div class="project">
-                    <p>Conjoint Analysis of Smartphone Market</p>
                     <img src="project1.jpg" alt="Project 1">
+                    <h3>Conjoint Analysis of Smartphone Market</h3>
+                    <p>Analyzing consumer preferences in the smartphone market using conjoint analysis.</p>
                     <button onclick="window.location.href='https://github.com/BrandyHuang/Conjoint-Analysis/tree/main'">View Project</button>
                 </div>
                 <div class="project">
-                    <p>Data Position Job Salary Analysis</p>
                     <img src="project2.jpg" alt="Project 2">
+                    <h3>Data Position Job Salary Analysis</h3>
+                    <p>Exploring salary trends in the data industry across various job positions.</p>
                     <button onclick="window.location.href='https://github.com/BrandyHuang/Data-Job-Salaries-Analysis'">View Project</button>
                 </div>
                 <div class="project">
-                    <p>Business Open Toolkit</p>
                     <img src="project3.jpg" alt="Project 3">
+                    <h3>Business Open Toolkit</h3>
+                    <p>A toolkit to help businesses streamline their operations and decision-making.</p>
                     <button onclick="window.location.href='https://github.com/BrandyHuang/Business-Open-Toolkit'">View Project</button>
                 </div>
             </div>
