--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
                     <p>A toolkit to help businesses streamline their operations and decision-making.</p>
                     <button onclick="window.location.href='https://github.com/BrandyHuang/Business-Open-Toolkit'">View Project</button>
                 </div>
+                <div class="project">
+                    <img src="project4.png" alt="Project 4">
+                    <h3>Diabetes Risk Analysis</h3>
+                    <p>Uncovering insights on female diabetes in different age groups </p>
+                    <button onclick="window.location.href='https://github.com/BrandyHuang/Diabetes-Analysis-ML-Model'">View Project</button>
+                </div>
             </div>
         </section>
     </main>
