--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="project">
                     <img src="project2.jpg" alt="Project 2">
-                    <h3>Data Position Job Salary Analysis</h3>
+                    <h3>Data Position Salary Analysis</h3>
                     <p>Exploring salary trends in the data industry across various job positions.</p>
                     <button onclick="window.location.href='https://github.com/BrandyHuang/Data-Job-Salaries-Analysis'">View Project</button>
                 </div>
