--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main class="container">
         <!-- Basic Info Section -->
         <section class="profile">
-            <h2>This is me!</h2>
+            <h2>This is Me!</h2>
             <img src="222.jpg" alt="Yuqing(Brandy) Huang" class="profile-img">
             <p><strong>Name:</strong> Yuqing(Brandy) Huang</p>
             <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/yq-huang">linkedin.com/in/yq-huang</a></p>
