--- a/index.html
+++ b/index.html
@@ -61,8 +61,14 @@
                 <div class="project">
                     <img src="project4.png" alt="Project 4">
                     <h3>Diabetes Risk Analysis</h3>
-                    <p>Uncovering insights on female diabetes in different age groups </p>
+                    <p>Uncovering insights on female diabetes in different age groups.</p>
                     <button onclick="window.location.href='https://github.com/BrandyHuang/Diabetes-Analysis-ML-Model'">View Project</button>
+                </div>
+                <div class="project">
+                    <img src="project5.png" alt="Project 5">
+                    <h3>Your Dentist Selection Helper</h3>
+                    <p>A webstie to help you filter out dentist nearby based on your input requirements.</p>
+                    <button onclick="window.location.href='https://github.com/Yingxuan-Selina-Bian/CruzHacksDentist_PoweredByLLM'">View Project</button>
                 </div>
             </div>
         </section>
