--- a/index.html
+++ b/index.html
@@ -41,6 +41,24 @@
             <p>Here are some of my recent projects. Click below to view details.</p>
             <div class="project-grid">
                 <div class="project">
+                    <img src="project4.png" alt="Project 4">
+                    <h3>Diabetes Risk Analysis</h3>
+                    <p>Uncovering insights on female diabetes in different age groups.</p>
+                    <button onclick="window.location.href='https://github.com/BrandyHuang/Diabetes-Analysis-ML-Model'">View Project</button>
+                </div>
+                <div class="project">
+                    <img src="project3.jpg" alt="Project 3">
+                    <h3>Venmo Customer Transaction Behavior Prediction</h3>
+                    <p>Utilizing LLM and statistical model to predict customer transaction behaviors.</p>
+                    <button onclick="window.location.href='https://github.com/BrandyHuang/Predictive-Analysis-on-Consumer-Transaction-Behavior'">View Project</button>
+                </div>
+                <div class="project">
+                    <img src="project3.jpg" alt="Project 3">
+                    <h3>Business Open Toolkit</h3>
+                    <p>A toolkit to help businesses streamline their operations and decision-making.</p>
+                    <button onclick="window.location.href='https://github.com/BrandyHuang/Business-Open-Toolkit'">View Project</button>
+                </div>
+                <div class="project">
                     <img src="project1.jpg" alt="Project 1">
                     <h3>Conjoint Analysis of Smartphone Market</h3>
                     <p>Analyzing consumer preferences in the smartphone market using conjoint analysis.</p>
@@ -51,18 +69,6 @@
                     <h3>Data Position Salary Analysis</h3>
                     <p>Exploring salary trends in the data industry across various job positions.</p>
                     <button onclick="window.location.href='https://github.com/BrandyHuang/Data-Job-Salaries-Analysis'">View Project</button>
-                </div>
-                <div class="project">
-                    <img src="project3.jpg" alt="Project 3">
-                    <h3>Business Open Toolkit</h3>
-                    <p>A toolkit to help businesses streamline their operations and decision-making.</p>
-                    <button onclick="window.location.href='https://github.com/BrandyHuang/Business-Open-Toolkit'">View Project</button>
-                </div>
-                <div class="project">
-                    <img src="project4.png" alt="Project 4">
-                    <h3>Diabetes Risk Analysis</h3>
-                    <p>Uncovering insights on female diabetes in different age groups.</p>
-                    <button onclick="window.location.href='https://github.com/BrandyHuang/Diabetes-Analysis-ML-Model'">View Project</button>
                 </div>
                 <div class="project">
                     <img src="project5.png" alt="Project 5">
