--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <button onclick="window.location.href='https://github.com/BrandyHuang/Diabetes-Analysis-ML-Model'">View Project</button>
                 </div>
                 <div class="project">
-                    <img src="project3.jpg" alt="Project 3">
+                    <img src="project6.png" alt="Project 6">
                     <h3>Venmo Customer Transaction Behavior Prediction</h3>
                     <p>Utilizing LLM and statistical model to predict customer transaction behaviors.</p>
                     <button onclick="window.location.href='https://github.com/BrandyHuang/Predictive-Analysis-on-Consumer-Transaction-Behavior'">View Project</button>
