--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
             <p>Here are some of my recent projects. Click below to view details.</p>
             <div class="project-grid">
                 <div class="project">
+                    <img src="project-7.png" alt="Project 7">
+                    <h3>Retention Analysis of Instacart eCommerce platform</h3>
+                    <p>Analyzing consumer retension based on different segmentation in the eCommerce market using survival analysis.</p>
+                    <button onclick="window.location.href='https://github.com/BrandyHuang/Instacart_User_Retention_Analysis'">View Project</button>
+                </div>
+                <div class="project">
                     <img src="project4.png" alt="Project 4">
                     <h3>Diabetes Risk Analysis</h3>
                     <p>Uncovering insights on female diabetes in different age groups.</p>
