--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p><strong>Name:</strong> Yuqing(Brandy) Huang</p>
             <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/yq-huang">linkedin.com/in/yq-huang</a></p>
             <p><strong>Phone:</strong> (628) 444-9955</p>
-            <p><strong>Email:</strong> byqhuang@ucdavis.edu</p>
+            <p><strong>Email:</strong> yqhuang00@gmail.com</p>
             <p><strong>Address:</strong> San Francisco, CA</p>
         </section>
     
@@ -43,7 +43,7 @@
                 <div class="project">
                     <img src="project-7.png" alt="Project 7">
                     <h3>Retention Analysis of Instacart eCommerce platform</h3>
-                    <p>Analyzing consumer retension based on different segmentation in the eCommerce market using survival analysis.</p>
+                    <p>Analyzing consumer retension based on different segmentation in eCommerce market using survival analysis.</p>
                     <button onclick="window.location.href='https://github.com/BrandyHuang/Instacart_User_Retention_Analysis'">View Project</button>
                 </div>
                 <div class="project">
