--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/yq-huang">linkedin.com/in/yq-huang</a></p>
             <p><strong>Phone:</strong> (628) 444-9955</p>
             <p><strong>Email:</strong> yqhuang00@gmail.com</p>
-            <p><strong>Address:</strong> San Francisco, CA</p>
+            <p><strong>Address:</strong> San Francisco Bay Area, CA</p>
         </section>
     
     <main class="container">   
