--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
         <section class="additional-info">
             <h2>More About Me</h2>
             <p> A real data enthusiast by day, and ice cream lover by night...<br>
-              As a MS candidate in Business Analytics at UC Davis, 
-              I turn data into insights and numbers into strategies. With experience in hospitality, customer service, and consumer behavior, I help businesses 
+              I am passionate about turning data into insights and numbers into strategies. With experience across statistical modeling, machine learning methods, and data visualiztion, I help businesses 
               understand what people really want (including ice cream!). I love finding patterns in data and making sense of trends, and I try to keep it fun—because data shouldn’t be boring! 
-              When I’m not working with data, I’m probably trying out new recipes, getting lost in music, or enjoying the outdoors. If you need someone who brings both data skills and personality, 
+              When I’m not working with data, I’m probably trying out new recipes, getting lost in music, or enjoying the outdoors. If you need someone who brings both data skills and fun, 
               I’m your person!</p>
         </section>
         
